--- a/master.html
+++ b/master.html
@@ -23,7 +23,10 @@
         小工具
       </button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="/tools/audio-viewer.html" >在线音频预览</a>
+        <a class="dropdown-item" href="/tools/audio-viewer.html" >音频预览</a>
+      </div>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="/tools/jmind/index.html" >思维导图</a>
       </div>
     </div>
   </div>
