--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   addTags("lg_1", list1);
 
   var list2 = {
-    "aria2": "http://pro.makef.icu/ariang/",
+    //"aria2": "http://pro.makef.icu/ariang/",
+    "探针":"http://sp.makef.icu/probe/",
   }
 
   addTags("lg_2", list2);
