--- a/port_list.html
+++ b/port_list.html
@@ -58,24 +58,24 @@
     "lnmp主页":"3000",
     "mysql":"3000/mysql",
     "probe":"3000/p.php",
-    "rtmp":"3001",
+    //"rtmp":"3001",
     "ttyd":"3002",
     "typecho":"3003",
-    "null":"3004",
+    "福利图片":"3004",
     "websocket-clien":"3005",
     "websocket-server":"3006",
-    "gofi":"3007",
-    "rtmp_m3u8":"3008",
+    "chfs":"3007",
+    //"rtmp_m3u8":"3008",
     "code-server":"3009",
     "frp保留":"3100-3200",
     "frp监控":"3100",
     "frp_tcp端口":"3101",
     "frp_udp端口":"3102",
     "frp_web转发":"3200",
-    " ---":"---",
-    "null":"3300",
-    "  ---":"---",
-    "router":"8081",
+    //"---------------":"---------------",
+    //"null":"3300",
+    "---------------":"---------------",
+    "router":"8080",
   }
   addTags("tb_1",list1);
   
