--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     "ttyd": "http://makef.icu:3002",
     "编辑器": "https://makef.icu:3009",
     "文件分享": "http://makef.icu:3007",
-    "图片分享":"https://makef.icu:3004",
+    //"图片分享":"https://makef.icu:3004",
     "s探针": "http://makef.icu:3000/p.php",
     "h探针": "http://makef.icu:3000/holy_lance.php",
     "frp监控": "http://makef.icu:3100",
