--- a/port_list.html
+++ b/port_list.html
@@ -61,7 +61,7 @@
     //"rtmp":"3001",
     "ttyd":"3002",
     "typecho":"3003",
-    "福利图片":"3004",
+    //"福利图片":"3004",
     "websocket-clien":"3005",
     "websocket-server":"3006",
     "chfs":"3007",
