--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
     "ttyd": "http://makef.icu:3002",
     "编辑器": "https://makef.icu:3009",
     "文件分享": "http://makef.icu:3007",
-    //"图片分享":"https://makef.icu:3004",
+    "图片分享":"https://makef.icu:3004",
     "s探针": "http://makef.icu:3000/p.php",
     "h探针": "http://makef.icu:3000/holy_lance.php",
     "frp监控": "http://makef.icu:3100",
     "数据库": "http://makef.icu:3000/mysql",
     "docker管理": "http://192.168.2.227:9000",
+    "远程控制":"http://makef.icu:3300/guacamole",
 
   }
 
@@ -71,7 +72,7 @@
 
   var list2 = {
     //"aria2": "http://pro.makef.icu/ariang/",
-    "探针":"http://sp.makef.icu/probe/",
+    "探针":"http://sp.makef.icu/",
   }
 
   addTags("lg_2", list2);
