--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h3>远程服务</h3>
+        <h3>网络服务</h3>
         <div class="list-group" style="display:inline-block" id="lg_2"></div>
       </div>
     </div>
@@ -73,6 +73,9 @@
   var list2 = {
     //"aria2": "http://pro.makef.icu/ariang/",
     "探针":"http://sp.makef.icu/",
+    "cf":"https://dash.cloudflare.com/",
+    "oracle":"https://www.oracle.com/cloud/sign-in.html",
+    "loc":"https://hostloc.com/forum-45-1.html",
   }
 
   addTags("lg_2", list2);
