--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
     "cf":"https://dash.cloudflare.com/",
     "oracle":"https://www.oracle.com/cloud/sign-in.html",
     "loc":"https://hostloc.com/forum-45-1.html",
+    "有趣网站":"http://guozhivip.com/lab/",
   }
 
   addTags("lg_2", list2);
 
   var list3 = {
-    "路由": "http://makef.icu:8081",
+    "路由": "http://makef.icu:8000",
     //"测速文件":"https://pro.makef.icu/1000m.bin",
   }
 
