--- a/tools/jmind/index.html
+++ b/tools/jmind/index.html
@@ -15,14 +15,7 @@
 </head>
 <body>
 
-  
-<div id="show">
-  <kbd>Ctrl+s</kbd>保存文件 &nbsp;&nbsp;
-  <kbd>Ctrl+o</kbd>打开文件 <br/>
-  <a href="https://cdn.jsdelivr.net/gh/JarenChow/JMind@main/JMind使用手册.pdf">详细文档</a>
-</div>
-<div id="app" style="width: 100%;height: 100%;">
-</div>
+<div id="app" style="width: 100%;height: 100%;"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/janvas"></script>
 <script src="./xmind.js"></script>
