--- a/master.html
+++ b/master.html
@@ -25,6 +25,7 @@
       <div class="dropdown-menu">
         <a class="dropdown-item" href="/tools/audio-viewer.html" >音频预览</a>
         <a class="dropdown-item" href="/tools/jmind/index.html" >思维导图</a>
+        <a class="dropdown-item" href="/tools/free_object.html" >白嫖项目</a>
       </div>
     </div>
   </div>
