--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
   var list1 = {
     "博客": "https://makef.icu:3003",
+    "我的博客": "https://makef.icu:3004",
     "聊天室": "http://makef.icu:3005",
     "ttyd": "http://makef.icu:3002",
     "编辑器": "https://makef.icu:3009",
