after reinstall system

--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@
   }
 
   var list1 = {
+    "音乐播放": "https://makef.icu:3001",
     "博客": "https://makef.icu:3003",
     "我的博客": "https://makef.icu:3004",
     "聊天室": "http://makef.icu:3005",
-    "ttyd": "http://makef.icu:3002",
-    "编辑器": "https://makef.icu:3009",
-    "文件分享": "http://makef.icu:3007",
+    //"编辑器": "https://makef.icu:3009",
+    "容器管理": "http://makef.icu:3007",
     "测速服务": "https://makef.icu:3008",
-    "s探针": "http://makef.icu:3000/p.php",
-    "h探针": "http://makef.icu:3000/holy_lance.php",
-    "frp监控": "http://makef.icu:3100",
-    "数据库": "http://makef.icu:3000/mysql",
-    "docker管理": "http://192.168.2.227:9000",
-    "远程控制":"http://makef.icu:3300/guacamole",
+    //"h探针": "http://makef.icu:3000/holy_lance.php",
+    "Nps监控": "https://makef.icu:3300",
+    //"数据库": "http://makef.icu:3000/mysql",
+    //"docker管理": "http://192.168.2.227:9000",
+    //"远程控制":"http://makef.icu:3300/guacamole",
 
   }
 
@@ -73,8 +72,9 @@
 
   var list2 = {
     //"aria2": "http://pro.makef.icu/ariang/",
-    "探针":"http://sp.makef.icu/",
+    "探针":"https://sp.makef.icu/",
     "下载":"https://dl.makef.icu/",
+    "ali-drive":"https://makef.icu:3002",
   }
 
   addTags("lg_2", list2);
