--- a/port_list.html
+++ b/port_list.html
@@ -55,27 +55,24 @@
   }
 
   var list1 = {
-    "lnmp主页":"3000",
-    "mysql":"3000/mysql",
-    "probe":"3000/p.php",
-    //"rtmp":"3001",
-    "ttyd":"3002",
-    "typecho":"3003",
-    "blog":"3004",
+    "phpmyadmin":"3000",
+    "navidrome":"3001",
+    "ali-drive":"3002",
+    "doc-blog":"3003",
+    "my-blog":"3004",
     "websocket-clien":"3005",
     "websocket-server":"3006",
-    "chfs":"3007",
+    "Portainer":"3007",
     "speedtest-x":"3008",
-    "code-server":"3009",
-    "frp保留":"3100-3200",
-    "frp监控":"3100",
-    "frp_tcp端口":"3101",
-    "frp_udp端口":"3102",
-    "frp_web转发":"3200",
-    //"---------------":"---------------",
-    //"null":"3300",
+    "":"3009",
+    "":"3310",
     "---------------":"---------------",
-    "router":"8080",
+    "nps监控":"3300",
+    "nps桥端口":"3348",
+    "nps http":"3349",
+    "nps https":"3350",
+    "---------------":"---------------",
+    "router":"8000",
   }
   addTags("tb_1",list1);
   
