--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     //"编辑器": "https://makef.icu:3009",
     "容器管理": "http://makef.icu:3007",
     "测速服务": "https://makef.icu:3008",
+    "ali网盘列表":"https://makef.icu:3009",
     //"h探针": "http://makef.icu:3000/holy_lance.php",
     "Nps监控": "https://makef.icu:3300",
     //"数据库": "http://makef.icu:3000/mysql",
@@ -73,8 +74,9 @@
   var list2 = {
     //"aria2": "http://pro.makef.icu/ariang/",
     "探针":"https://sp.makef.icu/",
-    "下载":"https://dl.makef.icu/",
-    "ali-drive":"https://makef.icu:3002",
+    "反代":"https://dl.makef.icu/",
+    "ali-drive-webdav":"https://makef.icu:3002",
+    "网盘及下载":"https://arm.makef.icu",
   }
 
   addTags("lg_2", list2);
